objects/HealthCloudGA__EhrPatient__c.object
<CustomObject>
    <description>Demographics and other administrative information about a person or animal receiving care or other health-related services.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1City__c</fullName>
        <label>Address1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Country__c</fullName>
        <label>Address1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1EndDate__c</fullName>
        <label>Address1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line1__c</fullName>
        <label>Address1 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line2__c</fullName>
        <label>Address1 Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1PostalCode__c</fullName>
        <label>Address1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1StartDate__c</fullName>
        <label>Address1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1State__c</fullName>
        <label>Address1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Text__c</fullName>
        <label>Address1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Use__c</fullName>
        <label>Address1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2City__c</fullName>
        <label>Address2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Country__c</fullName>
        <label>Address2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2EndDate__c</fullName>
        <label>Address2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Line1__c</fullName>
        <label>Address2 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2PostalCode__c</fullName>
        <label>Address2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2StartDate__c</fullName>
        <label>Address2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2State__c</fullName>
        <label>Address2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Text__c</fullName>
        <label>Address2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Use__c</fullName>
        <label>Address2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3City__c</fullName>
        <label>Address3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Country__c</fullName>
        <label>Address3 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3EndDate__c</fullName>
        <label>Address3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3PostalCode__c</fullName>
        <label>Address3 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3StartDate__c</fullName>
        <label>Address3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3State__c</fullName>
        <label>Address3 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Text__c</fullName>
        <label>Address3 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Use__c</fullName>
        <label>Address3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1Label__c</fullName>
        <label>Communication1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication1System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2Label__c</fullName>
        <label>Communication2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication2System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Communication3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3Label__c</fullName>
        <label>Communication3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Communication3System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Communication3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DeceasedDate__c</fullName>
        <description>Date of death, if applicable</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName1__c</fullName>
        <label>Family Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName2__c</fullName>
        <label>Family Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName3__c</fullName>
        <label>Family Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GenderCode__c</fullName>
        <description>Gender Symbol in syntax defined by the system</description>
        <label>Gender Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GenderLabel__c</fullName>
        <label>Gender Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GenderSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Gender System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName1__c</fullName>
        <label>Given Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName2__c</fullName>
        <label>Given Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName3__c</fullName>
        <label>Given Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IntegrationIsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Integration Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If all the communication labels are null return false else return true</description>
        <formula>IF( AND( IsBlank(HealthCloudGA__Communication1Label__c ), IsBlank(HealthCloudGA__Communication2Label__c ), IsBlank(HealthCloudGA__Communication3Label__c), IsBlank(HealthCloudGA__Communication4Label__c),IsBlank(HealthCloudGA__Communication5Label__c) ) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Languages__c</fullName>
        <formula>IF(ISBLANK(HealthCloudGA__Communication1Label__c),&apos;&apos;,HealthCloudGA__Communication1Label__c )  +
IF(ISBLANK(HealthCloudGA__Communication2Label__c),&apos;&apos;, &apos; | &apos; + HealthCloudGA__Communication2Label__c )  +
IF(ISBLANK(HealthCloudGA__Communication3Label__c),&apos;&apos;, &apos; | &apos; + HealthCloudGA__Communication3Label__c )  +
IF(ISBLANK(HealthCloudGA__Communication4Label__c),&apos;&apos;, &apos; | &apos; + HealthCloudGA__Communication4Label__c )  +
IF(ISBLANK(HealthCloudGA__Communication5Label__c),&apos;&apos;, &apos; | &apos; + HealthCloudGA__Communication5Label__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaritalStatusCode__c</fullName>
        <description>Marital Status Symbol in syntax defined by the system</description>
        <label>Marital Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaritalStatusLabel__c</fullName>
        <label>Marital Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MaritalStatusSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Marital Status System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MultipleBirth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether patient is part of a multiple birth</description>
        <label>Multiple Birth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Name__c</fullName>
        <label>Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization255__c</fullName>
        <label>Organization 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization__c</fullName>
        <label>Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PhotoUrl__c</fullName>
        <label>Photo URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName1__c</fullName>
        <label>Prefix Name1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName2__c</fullName>
        <label>Prefix Name2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName3__c</fullName>
        <label>Prefix Name3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>An external identifier for the EHR Patient.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName1__c</fullName>
        <label>Suffix Name1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName2__c</fullName>
        <label>Suffix Name2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName3__c</fullName>
        <label>Suffix Name3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Patient</label>
    <nameField>
        <displayFormat>Pati-{0}</displayFormat>
        <label>EHR Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>